--- a/files/resources/ui/password.ui
+++ b/files/resources/ui/password.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>526</width>
-    <height>119</height>
+    <width>450</width>
+    <height>200</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>526</width>
-    <height>119</height>
+    <width>450</width>
+    <height>200</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>526</width>
-    <height>119</height>
+    <width>450</width>
+    <height>200</height>
    </size>
   </property>
   <property name="font">
@@ -31,14 +31,14 @@
    <string>Password</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>../icons/key.png</normaloff>../icons/key.png</iconset>
+   <iconset resource="../icons/icons.qrc">
+    <normaloff>:/icons/key.png</normaloff>:/icons/key.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(255, 255, 255);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QFrame" name="frame_2">
       <property name="frameShape">
@@ -84,17 +84,32 @@
           <string/>
          </property>
          <property name="pixmap">
-          <pixmap>../icons/lock-pattern.png</pixmap>
+          <pixmap resource="../icons/icons.qrc">:/icons/padlock.png</pixmap>
          </property>
          <property name="scaledContents">
           <bool>true</bool>
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="font">
+          <font>
+           <family>Segoe UI Semibold</family>
+           <pointsize>16</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>Password</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
-    <item>
+    <item alignment="Qt::AlignTop">
      <widget class="QFrame" name="frame">
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
@@ -119,6 +134,19 @@
         <number>0</number>
        </property>
        <item>
+        <widget class="QLabel" name="label_3">
+         <property name="font">
+          <font>
+           <family>Segoe UI Light</family>
+           <pointsize>9</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>provide your sudo password</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QLineEdit" name="password_input">
          <property name="minimumSize">
           <size>
@@ -131,6 +159,9 @@
            <width>16777215</width>
            <height>30</height>
           </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">image: url(:/icons/password.png);</string>
          </property>
          <property name="echoMode">
           <enum>QLineEdit::Password</enum>
@@ -149,6 +180,8 @@
    </layout>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icons/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
