--- a/files/resources/ui/swap.ui
+++ b/files/resources/ui/swap.ui
@@ -26,8 +26,8 @@
    <string>Swapify</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>../icons/cpu.ico</normaloff>../icons/cpu.ico</iconset>
+   <iconset resource="../icons/icons.qrc">
+    <normaloff>:/icons/cpu.ico</normaloff>:/icons/cpu.ico</iconset>
   </property>
   <property name="documentMode">
    <bool>false</bool>
@@ -144,7 +144,7 @@
              <string/>
             </property>
             <property name="pixmap">
-             <pixmap>../icons/ram.png</pixmap>
+             <pixmap resource="../icons/icons.qrc">:/icons/ram.png</pixmap>
             </property>
             <property name="scaledContents">
              <bool>true</bool>
@@ -313,7 +313,12 @@
         </property>
         <property name="styleSheet">
          <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(38, 162, 105);</string>
+background-color: rgb(38, 162, 105);
+border-style:solid;
+border-width:1px;
+border-color: rgb(33, 33, 33);
+border-radius:8px;
+selection-background-color: rgb(41, 186, 1);</string>
         </property>
         <property name="text">
          <string>Create</string>
@@ -339,8 +344,8 @@ background-color: rgb(38, 162, 105);</string>
         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Cantarell'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Cantarell'; font-size:11pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </widget>
@@ -353,7 +358,7 @@ p, li { white-space: pre-wrap; }
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>24</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMore">
@@ -365,11 +370,17 @@ p, li { white-space: pre-wrap; }
    <addaction name="menuMore"/>
   </widget>
   <action name="actionAbout">
+   <property name="icon">
+    <iconset resource="../icons/icons.qrc">
+     <normaloff>:/icons/information.png</normaloff>:/icons/information.png</iconset>
+   </property>
    <property name="text">
     <string>About</string>
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icons/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
